changes in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,20 +7,20 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin <account-id>.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 833980666113.dkr.ecr.ap-northeast-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
       - mvn clean package
       - docker build -t demo-app .
-      - docker tag demo-app:latest <account-id>.dkr.ecr.us-east-1.amazonaws.com/demo-app:latest
+      - docker tag demo-app:latest 833980666113.dkr.ecr.ap-northeast-1.amazonaws.com/demo-app:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push <account-id>.dkr.ecr.us-east-1.amazonaws.com/demo-app:latest
+      - docker push 833980666113.dkr.ecr.ap-northeast-1.amazonaws.com/demo-app:latest
 
 artifacts:
   files:
-    - target/demo-0.0.1-SNAPSHOT.jar
+    - target/DemoApp-0.0.1-SNAPSHOT.jar
